--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
         android:layout_weight="0"
         android:gravity="center"
         android:padding="10px"
-        android:text="رمز التفعيل"
-        android:textColor="#009688"
+        android:text="حظر مستخدم"
+        android:textColor="#FF1100"
         android:textSize="35sp"
         tools:layout_editor_absoluteX="45dp"
         tools:layout_editor_absoluteY="45dp" />
@@ -81,5 +81,6 @@
         android:text="استعادة كلمة المرور"
         android:textColor="#000"
         android:textSize="25dp" />
+
 
 </LinearLayout>
